--- a/mobile.css
+++ b/mobile.css
@@ -56,13 +56,13 @@ h2{
 #compartir{
     height: 20%;
     display: block;
-    display: none;
 }
 
 #div-michelle{
-    width: 23%;
-    height: 100%;
-    display: inline-block;
+    width: 19%;
+    height: 45%;
+    float: left;
+    margin-left: 1em;
 }
 
 #michelle{
@@ -102,6 +102,7 @@ h2{
     font-family: 'Manrope', sans-serif;
     font-weight: 700;
     text-align: center;
+    display:none;
 }
 
 #icon-share{
@@ -113,6 +114,10 @@ h2{
 #icon-share img{
     float: right;
     margin-top: 0.5em;
+    background-color: hsl(210, 46%, 95%);
+    padding: 0.5em;
+    border-radius: 50% 50% 50% 50%;
+    margin-right: 1em;
 }
 
 #share-texto{
@@ -149,7 +154,6 @@ h2{
     background-color: white;
     padding: 0.5em;
     border-radius: 50% 50% 50% 50%;
-    fill: black;
 }
 
 
